--- a/popup.css
+++ b/popup.css
@@ -17,7 +17,9 @@ body {
     width: 375px; /* Increased width */
     max-width: 800px;
     max-height: 600px;
-    overflow-y: auto;}
+    overflow-y: auto;
+  }
+    
   .btn {
     margin-top: 10px;
   }
