--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,10 @@
 body {
     font-family: Arial, sans-serif;
+    max-width: 800px;
+    max-height: 800px;
+    overflow-y: auto;
+    height: 550px;
+    width: 375px;
   }
   nav {
     margin-bottom: 20px;
@@ -12,12 +17,6 @@ body {
   }
   .form-control {
     margin-bottom: 10px;
-  }
-  .container {
-    width: 375px; /* Increased width */
-    max-width: 800px;
-    max-height: 600px;
-    overflow-y: auto;
   }
     
   .btn {
